force-app/main/default/objects/SBQQ__Subscription__c/fields/Approval_Level_Formula__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_Formula__c</fullName>
    <description>To stamp it on Amendment /Renewal Quote Line</description>
    <formula>SBQQ__QuoteLine__r.Approval_level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Level Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>