force-app/main/default/objects/SBQQ__Subscription__c/fields/Asset_Id__c.field-meta.xml
<CustomField>
    <fullName>Asset_Id__c</fullName>
    <description>This will be updated from ITSM</description>
    <label>Asset Id</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>