force-app/main/default/objects/SBQQ__Subscription__c/fields/Bill_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_End_Date__c</fullName>
    <label>Bill End Date</label>
    <type>Date</type>
</CustomField>