force-app/main/default/objects/SBQQ__Subscription__c/fields/Bill_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Start_Date__c</fullName>
    <label>Bill Start Date</label>
    <type>Date</type>
</CustomField>