force-app/main/default/objects/SBQQ__Subscription__c/fields/Billing_Group__c.field-meta.xml
<CustomField>
    <fullName>Billing_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Group</label>
    <referenceTo>Billing_Group__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>