force-app/main/default/objects/SBQQ__Subscription__c/fields/Bundle_Description__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Description__c</fullName>
    <label>Bundle Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>