force-app/main/default/objects/SBQQ__Subscription__c/fields/Bundle_Id__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Id__c</fullName>
    <formula>IF(ISBLANK( SBQQ__RequiredById__c ),  CASESAFEID(Id) , SBQQ__RequiredById__c)</formula>
    <label>Bundle Id</label>
    <type>Text</type>
</CustomField>