force-app/main/default/objects/SBQQ__Subscription__c/fields/Bundle_Name__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Name__c</fullName>
    <description>This field used for reporting purpose and relevant to component lines to show bundle name. This will be moved to subscription records using twin fields.</description>
    <formula>IF(
    ISBLANK( SBQQ__RequiredById__c ),
    SBQQ__ProductName__c, 
    SBQQ__RequiredByProduct__r.Name 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bundle Name</label>
    <type>Text</type>
</CustomField>