force-app/main/default/objects/SBQQ__Subscription__c/fields/Burstable_Upto__c.field-meta.xml
<CustomField>
    <fullName>Burstable_Upto__c</fullName>
    <label>Burstable Upto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>