force-app/main/default/objects/SBQQ__Subscription__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IN10</fullName>
                <label>Yotta Data Services Private Limited</label>
            </value>
            <value>
                <fullName>IN20</fullName>
                <label>Yotta Network Services Private Limited</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>