force-app/main/default/objects/SBQQ__Subscription__c/fields/Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date__c</fullName>
    <description>This Date will come from backend application based on the Actual termination of service.</description>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>