force-app/main/default/objects/SBQQ__Subscription__c/fields/Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>Subscriptions (Cloned From)</relationshipLabel>
    <relationshipName>Cloned_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>