force-app/main/default/objects/SBQQ__Subscription__c/fields/Cloned_From_Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From_Subscription_Id__c</fullName>
    <label>Cloned From Subscription Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>