force-app/main/default/objects/SBQQ__Subscription__c/fields/Contract_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Owner_Id__c</fullName>
    <formula>CASESAFEID(SBQQ__Contract__r.OwnerId)</formula>
    <label>Contract Owner Id</label>
    <type>Text</type>
</CustomField>