force-app/main/default/objects/SBQQ__Subscription__c/fields/Currency_Sensitive_Line__c.field-meta.xml
<CustomField>
    <fullName>Currency_Sensitive_Line__c</fullName>
    <formula>SBQQ__Contract__r.Currency_Conversion_Factor__c * Monthly_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency_Sensitive_Line</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>