force-app/main/default/objects/SBQQ__Subscription__c/fields/Delivery_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location_Address__c</fullName>
    <description>This will contact the Location or the ADDRESS# if it is CUSTOMER SITE
----EARLIER FORMULA----
IF(TEXT(Location__c) = &quot;Customer Site&quot;,
Shipping_Address__r.AddressLine1__c + &quot;,&quot; + Shipping_Address__r.AddressLine2__c + &quot;,&quot; + Shipping_Address__r.City__c + &quot;,&quot; + Shipping_Address__r.State2__r.Name + &quot;,&quot; + TEXT(Shipping_Address__r.Country__c) ,
TEXT(Location__c))
-------------------------
changed from this:
 IF(TEXT(Location__c) = &quot;Customer Site&quot;, CASESAFEID(Shipping_Address__c),
TEXT(Location__c))</description>
    <formula>IF(TEXT(Location__c) = &quot;Customer Site&quot;, CASESAFEID(Shipping_Address__c),
IF(TEXT(Business_Unit__c)=&quot;IN10&quot;,
IF(Sale_Type__c=&quot;ZTAD&quot;,
CASE(TEXT( Location__c ),
&quot;IN14&quot; ,&quot;IN14&quot;,
&quot;IN11&quot; ,&quot;IN11&quot;,
&quot;IN12&quot; ,TEXT( Location__c ),
&quot;IN15&quot; , &quot;IN15&quot; ,
&quot;IN16&quot; , &quot;IN16&quot; ,
&quot;IN18&quot; , &quot;IN18&quot; ,
&quot;IN19&quot; , &quot;IN19&quot; ,
&quot;I101&quot;,&quot;I101&quot;,
&quot;I102&quot;,&quot;I102&quot;,
&quot;&quot;) ,


	CASE(TEXT( Location__c ),
&quot;IN14&quot;, &quot;IN14&quot;,
&quot;IN11&quot; ,&quot;IN11&quot;,
&quot;IN12&quot;, &quot;IN11&quot;,
&quot;IN15&quot;, &quot;IN15&quot;,
&quot;IN16&quot;, &quot;IN16&quot;,
&quot;IN18&quot; , &quot;IN18&quot; ,
&quot;IN19&quot; , &quot;IN19&quot; ,
&quot;I101&quot;,&quot;I101&quot;,
&quot;I102&quot;,&quot;I102&quot;,
&quot;&quot; ) ) ,

IF(Sale_Type__c=&quot;ZTAD&quot;,
CASE(TEXT( Location__c ),
&quot;IN11&quot; , &quot;IN21&quot;,
&quot;IN14&quot; , &quot;IN22&quot;,
&quot;IN15&quot; , &quot;IN23&quot;,
&quot;IN12&quot; , &quot;IN12&quot;,
&quot;IN16&quot; , &quot;IN24&quot;,
&quot;IN18&quot; , &quot;IN25&quot;,
&quot;I101&quot; , &quot;IN27&quot;,
&quot;I102&quot; , &quot;IN28&quot;,
&quot;IN26&quot; , &quot;IN26&quot;,
&quot;IN29&quot; , &quot;IN29&quot;,
&quot;&quot;) ,

CASE(TEXT( Location__c ),
&quot;IN16&quot;, &quot;IN16&quot;,
&quot;IN14&quot;, &quot;IN14&quot;,
&quot;IN15&quot;, &quot;IN23&quot;,
&quot;&quot;
) ) ))</formula>
    <label>Delivery Location Address</label>
    <type>Text</type>
</CustomField>