force-app/main/default/objects/SBQQ__Subscription__c/fields/DR_Number__c.field-meta.xml
<CustomField>
    <fullName>DR_Number__c</fullName>
    <description>This will come from ITSM</description>
    <label>DR Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>