force-app/main/default/objects/SBQQ__Subscription__c/fields/DR_Status__c.field-meta.xml
<CustomField>
    <fullName>DR_Status__c</fullName>
    <label>DR Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>