force-app/main/default/objects/SBQQ__Subscription__c/fields/Effective_date__c.field-meta.xml
<CustomField>
    <fullName>Effective_date__c</fullName>
    <description>Date for Contract Lines SCF</description>
    <label>Effective date</label>
    <type>Date</type>
</CustomField>