force-app/main/default/objects/SBQQ__Subscription__c/fields/Finalized_Billing_Dates__c.field-meta.xml
<CustomField>
    <fullName>Finalized_Billing_Dates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To trigger subscriptions integration</description>
    <label>Finalized Billing Dates?</label>
    <type>Checkbox</type>
</CustomField>