force-app/main/default/objects/SBQQ__Subscription__c/fields/HSN_SAC_Code__c.field-meta.xml
<CustomField>
    <fullName>HSN_SAC_Code__c</fullName>
    <description>This is for reporting purpose - Fetch HSN / SAC Code from Product master</description>
    <formula>SBQQ__Product__r.HSN_SAC_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HSN / SAC Code</label>
    <type>Text</type>
</CustomField>