force-app/main/default/objects/SBQQ__Subscription__c/fields/IR_Number__c.field-meta.xml
<CustomField>
    <fullName>IR_Number__c</fullName>
    <description>This will come from ITSM</description>
    <label>IR Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>