force-app/main/default/objects/SBQQ__Subscription__c/fields/IR_Status__c.field-meta.xml
<CustomField>
    <fullName>IR_Status__c</fullName>
    <description>This will come from ITSM</description>
    <label>IR Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>