force-app/main/default/objects/SBQQ__Subscription__c/fields/is_ready_for_billing_group_integration__c.field-meta.xml
<CustomField>
    <fullName>is_ready_for_billing_group_integration__c</fullName>
    <formula>ISPICKVAL(SBQQ__Contract__r.Status, &apos;Approved&apos;) || ISPICKVAL(SBQQ__Contract__r.Status, &apos;Activated&apos;) || ISPICKVAL(SBQQ__Contract__r.Status, &apos;Expired&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is ready for billing group integration</label>
    <type>Checkbox</type>
</CustomField>