force-app/main/default/objects/SBQQ__Subscription__c/fields/Is_Ready_for_Integration__c.field-meta.xml
<CustomField>
    <fullName>Is_Ready_for_Integration__c</fullName>
    <formula>SBQQ__Contract__r.Is_Ready_for_Integration__c</formula>
    <label>Is Ready for Integration</label>
    <type>Checkbox</type>
</CustomField>