force-app/main/default/objects/SBQQ__Subscription__c/fields/Is_Ready_for_Sync__c.field-meta.xml
<CustomField>
    <fullName>Is_Ready_for_Sync__c</fullName>
    <formula>(ISBLANK(SBQQ__Contract__r.Last_Sync_Date__c) || SBQQ__Contract__r.Last_Sync_Date__c &lt;  LastModifiedDate) &amp;&amp; SBQQ__Bundle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Ready for Sync</label>
    <type>Checkbox</type>
</CustomField>