force-app/main/default/objects/SBQQ__Subscription__c/fields/Latest_Quote_SCF_Type__c.field-meta.xml
<CustomField>
    <fullName>Latest_Quote_SCF_Type__c</fullName>
    <formula>TEXT( SBQQ__Contract__r.Last_Quote__r.SCF_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Quote SCF Type</label>
    <type>Text</type>
</CustomField>