force-app/main/default/objects/SBQQ__Subscription__c/fields/Latest_Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Latest_Quote_Type__c</fullName>
    <formula>SBQQ__Contract__r.Lastest_Quote_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Quote Type</label>
    <type>Text</type>
</CustomField>