force-app/main/default/objects/SBQQ__Subscription__c/fields/Line_Sr_No__c.field-meta.xml
<CustomField>
    <fullName>Line_Sr_No__c</fullName>
    <label>Line Item Sr #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>