force-app/main/default/objects/SBQQ__Subscription__c/fields/Line_Sr_No_Formula__c.field-meta.xml
<CustomField>
    <fullName>Line_Sr_No_Formula__c</fullName>
    <formula>VALUE( Line_Sr_No__c )</formula>
    <label>Line Sr No. (Formula)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>