force-app/main/default/objects/SBQQ__Subscription__c/fields/Monthly_Price__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Price__c</fullName>
    <description>Created By nandish for Integration</description>
    <label>Monthly Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>