force-app/main/default/objects/SBQQ__Subscription__c/fields/Net_Total__c.field-meta.xml
<CustomField>
    <fullName>Net_Total__c</fullName>
    <formula>SBQQ__QuoteLine__r.SBQQ__NetTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>