force-app/main/default/objects/SBQQ__Subscription__c/fields/Old_Sub_Bill_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_Sub_Bill_Start_Date__c</fullName>
    <formula>SBQQ__QuoteLine__r.SBQQ__RenewedSubscription__r.Bill_Start_Date__c</formula>
    <label>Old Sub Bill Start Date</label>
    <type>Date</type>
</CustomField>