force-app/main/default/objects/SBQQ__Subscription__c/fields/Price_Dimension_Type__c.field-meta.xml
<CustomField>
    <fullName>Price_Dimension_Type__c</fullName>
    <formula>TEXT( SBQQ__Dimension__r.Dimension_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Dimension Type</label>
    <type>Text</type>
</CustomField>