force-app/main/default/objects/SBQQ__Subscription__c/fields/Product_BU__c.field-meta.xml
<CustomField>
    <fullName>Product_BU__c</fullName>
    <formula>TEXT( SBQQ__Product__r.Product_BU__c )</formula>
    <label>Product BU</label>
    <type>Text</type>
</CustomField>