force-app/main/default/objects/SBQQ__Subscription__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <formula>SBQQ__Product__r.Product_Code_Auto_Number__c</formula>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>