force-app/main/default/objects/SBQQ__Subscription__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Formula to pull Product Family of the product. This will be used for reports.</description>
    <formula>CASE(TEXT( SBQQ__Product__r.Family ), 
&quot;10&quot;, &quot;Colocation&quot;,
&quot;DC Build&quot;, &quot;DC Build&quot;,
&quot;12&quot;, &quot;Network &amp; Connectivity&quot;,
&quot;13&quot;, &quot;IT Security&quot;,
&quot;14&quot;, &quot;Yotta Cloud&quot;,
&quot;15&quot;, &quot;Private Cloud&quot;,
&quot;16&quot;, &quot;Federated Fund&quot;,
&quot;17&quot;, &quot;IT Management&quot;,
&quot;18&quot;, &quot;Traded Goods&quot;,
&quot;&quot;)</formula>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>