force-app/main/default/objects/SBQQ__Subscription__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <description>Formula to pull Product Line of the product. This will be used for reports.</description>
    <formula>SBQQ__Product__r.Product_Line_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>