force-app/main/default/objects/SBQQ__Subscription__c/fields/Product_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Model__c</fullName>
    <description>Formula to pull Product Line of the product. This will be used for reports.</description>
    <formula>SBQQ__Product__r.Model_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Model</label>
    <type>Text</type>
</CustomField>