force-app/main/default/objects/SBQQ__Subscription__c/fields/PUE__c.field-meta.xml
<CustomField>
    <fullName>PUE__c</fullName>
    <label>PUE</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>