force-app/main/default/objects/SBQQ__Subscription__c/fields/Quantity_Discount__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Discount__c</fullName>
    <label>Quantity Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>