force-app/main/default/objects/SBQQ__Subscription__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <formula>CASESAFEID(SBQQ__Contract__r.SBQQ__Quote__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote</label>
    <type>Text</type>
</CustomField>