force-app/main/default/objects/SBQQ__Subscription__c/fields/Required_By_SCF_Type__c.field-meta.xml
<CustomField>
    <fullName>Required_By_SCF_Type__c</fullName>
    <formula>TEXT( SBQQ__QuoteLine__r.SBQQ__RequiredBy__r.SCF_Type__c )</formula>
    <label>Required By SCF Type</label>
    <type>Text</type>
</CustomField>