force-app/main/default/objects/SBQQ__Subscription__c/fields/Revised_Subscription_Line_Sr_No__c.field-meta.xml
<CustomField>
    <fullName>Revised_Subscription_Line_Sr_No__c</fullName>
    <formula>SBQQ__RevisedSubscription__r.Line_Sr_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revised Subscription Line Sr No.</label>
    <type>Text</type>
</CustomField>