force-app/main/default/objects/SBQQ__Subscription__c/fields/Revised_Subscription_Service_Id__c.field-meta.xml
<CustomField>
    <fullName>Revised_Subscription_Service_Id__c</fullName>
    <formula>SBQQ__RevisedSubscription__r.Service_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revised Subscription Service Id</label>
    <type>Text</type>
</CustomField>