force-app/main/default/objects/SBQQ__Subscription__c/fields/S_No__c.field-meta.xml
<CustomField>
    <fullName>S_No__c</fullName>
    <label>Quote Line Sr #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>