force-app/main/default/objects/SBQQ__Subscription__c/fields/Sale_Type__c.field-meta.xml
<CustomField>
    <fullName>Sale_Type__c</fullName>
    <formula>TEXT( SBQQ__Product__r.Sale_Type__c )</formula>
    <label>Sale Type</label>
    <type>Text</type>
</CustomField>